frontend/test/should_pass/retype_009.grg
using attrib_model_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		
		x -e:EINT-> y;
		-f:EBOOL->;
	}
	modify {
		x - ee:typeof(f)<e> -> y;
	}
}
