frontend/test/should_fail/hom_002.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node;
		hom(y, f);
	}
	modify {}
}

